bynkc/tests/fixtures/positive/331_refined_kernel_declared_method_wins/input.bynk
commons demo {
  -- #561 DECISION D: a declared method on the refined type wins over the
  -- inherited kernel. `shout` resolves to the declared `Name.shout`; `length`
  -- has no declared method, so it falls back to the inherited String kernel.
  type Name = String where NonEmpty

  fn Name.shout(self) -> String {
    "OVERRIDDEN"
  }

  fn greet(n: Name) -> String {
    n.shout()
  }

  fn size(n: Name) -> Int {
    n.length()
  }
}
