bynkc/tests/fixtures/negative/321_bool_refinement_no_kernel/input.bynk
commons demo {
  -- #561 DECISION C: `Bool` has no kernel, so a `Bool`-based refinement
  -- inherits nothing — the call is `method_not_found`.
  type Flag = Bool

  fn bad(f: Flag) -> Bool {
    f.toUpper()
  }
}
